x-platform/public/less/layout.less
.full-height {
  height: 100%;
  // overflow-y: hidden;
  overflow-y: visible;
}

.content-height {
    height: calc(~'100% - 51px');
    &.header-hidden {
      height: 100%;
    }
}

body.full-height {
  overflow-y: auto;
}

.hoverable {
  .show-on-hover {
    display: none;
  }
  &:hover {
    .show-on-hover {
      display: inline-block;
    }
    .hide-on-hover {
      display: none;
    }
  }
}

plugins-loader {
  display: flex;
  flex-direction: column;
  height: 100%;
}
plugins-loader:empty {
  display: none;
}

plugins-loader > * {
  flex: 1;
  display: block;
  overflow: auto;

  &:empty {
    display: none;
    flex: 0;
  }

  > * {
    display: block;
    height: 100%;
  }
}

